deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ql-rf
  labels:
    app.kubernetes.io/name: ql-rf
    app.kubernetes.io/component: platform
